# OpenMP

./: CMakeLists.txt  main.cpp
